[workspace]
resolver = "2" # What does this do?

[package]
name = "vger"
description = "2D GPU renderer for dynamic UIs"
version = "0.2.5"
license = "MIT"
readme = "README.md"
authors = ["Taylor Holliday <taylor@audulus.com>"]
keywords = ["graphics", "canvas", "vector", "drawing", "gpu"]
categories = ["graphics"]
repository = "https://github.com/audulus/vger-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
euclid = "0.22.7"
fontdue = "0.7.2"
rect_packer = "0.2.1"
rand = "0.7.3"
cosmic-text = { git = "https://github.com/lapce/cosmic-text", rev = "fa0efccc67b0ff362056198fc931bd24f68d3fb8" }
# cosmic-text = { path = "../cosmic-text" }

[dev-dependencies]
png = "0.17.6"
futures = "0.3"
futures-intrusive = "0.5"
